@@ -41,6 +41,7 @@
 * Priority: Add support for `replay_id` field [drkjc] #4352
 * Stripe PI: standardize `shipping_address` fields [dsmcclain] #4355
 * Airwallex: support gateway [therufs] #4342
+* Litle: Translate google_pay as android_pay [javierpedrozaing] #4331
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
